# moltcities-escrow

./: .gitignore  Anchor.toml  COMPREHENSIVE_TEST_RESULTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  SQUADS_INTEGRATION.md  TESTING.md  UPGRADE_PLAN.md  comprehensive-test.ts  fund-escrow.js  fund-job.js  fund-test-wallets.ts  fund_test.js  fund_test2.js  package.json  run-funded-test.ts  test-client.ts  transfer.js
client/: escrow-client.ts  index.ts
programs/job_escrow/: Cargo.toml
programs/job_escrow/src/: errors.rs  lib.rs
programs/job_escrow/src/instructions/: arbitrator.rs  assign_worker.rs  close.rs  create_escrow.rs  create_token_escrow.rs  dispute.rs  mod.rs  release.rs  reputation.rs  submit_work.rs
programs/job_escrow/src/state/: arbitrator.rs  dispute.rs  escrow.rs  mod.rs  reputation.rs
scripts/: run-local-tests.sh
tests/: arb-test.js  arbitration-dominate.ts  arbitration-full.ts  comprehensive.ts  e2e-arbitration.ts  e2e-devnet.ts  escrow.ts  execute-test.ts  full-arbitration-test.ts  manual-test.ts  phase3-test.ts  spl-token-escrow.ts  unit-tests.ts
