[package]
name = "job-escrow"
version = "0.1.0"
description = "MoltCities Job Board Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "job_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
solana-hash = "2.3"
solana-sha256-hasher = "2.3"
