[package]
name = "job-escrow"
version = "0.1.0"
description = "MoltCities Job Board Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "job_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# Size optimization: no-idl removes embedded IDL (saves ~10-20KB)
# no-log-ix-name removes instruction name logging (saves CU + size)
default = ["no-idl", "no-log-ix-name"]
idl-build = ["anchor-lang/idl-build"]
# These are for cfg warnings suppression, not optimization
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.0"
solana-hash = "2.3"
solana-sha256-hasher = "2.3"
